--- a/Resources/Styles/Digital/design.css
+++ b/Resources/Styles/Digital/design.css
@@ -84,15 +84,15 @@ a:hover {
 	top: 0;
 	left: 0;
 	right: 0;
-	color: #CCC;
+	color: #fff;
 	z-index: 400;
 	position: fixed;
-	background: #333;
+	background: #000;
 	padding: 3px 5px 3px;
 	font: Monaco !important;
-	border-bottom: 1px solid #525252;
+	border-bottom: 1px solid #000;
 	-webkit-box-shadow: 0 1px 8px #333;
-	background: -webkit-gradient(linear, left top, left bottom, from(#444), to(#333));
+	background: -webkit-gradient(linear, left top, left bottom, from(#1c1c1c), to(#141414));
 }
 
 /* Images */
@@ -103,8 +103,8 @@ body a img {
 
 body img {
     display: block;
-    max-width: 600px;
-    max-height: 150px;
+    max-width: 400px;
+    max-height: 400px;
     padding-top: 5px;
     padding-left: 8px;
     padding-bottom: 5px;
@@ -113,13 +113,54 @@ body img {
 /* Remember Line */
 
 div[id=mark] {
-	position: relative;
-	z-index: 295;
-	margin-top: -1px;
-	border-bottom: 1px dashed;
-	border-color: #444;
-	-webkit-transition: 0.2s linear;
+  position: relative;
+  z-index: 295;
+  margin-top: -1px;
+  border-bottom: 1px dashed;
+  border-color: #444;
+  -webkit-transition: 0.2s linear;
 }
+
+/* Nickname Colors */
+
+body div[type=privmsg] .sender[type=myself],
+body div[type=action] .sender[type=myself] { 
+	color: #3eb4e5; 
+}
+
+body .sender[type=normal][colornumber='0'] { color: #f00; }
+body .sender[type=normal][colornumber='1'] { color: #d55e19; }
+body .sender[type=normal][colornumber='2'] { color: #ed9600; }
+body .sender[type=normal][colornumber='3'] { color: #ffe200; }
+body .sender[type=normal][colornumber='4'] { color: #ff0; }
+body .sender[type=normal][colornumber='5'] { color: #d8e900; }
+body .sender[type=normal][colornumber='6'] { color: #aeda00; }
+body .sender[type=normal][colornumber='7'] { color: #5aae00; }
+body .sender[type=normal][colornumber='8'] { color: #009d88; }
+body .sender[type=normal][colornumber='9'] { color: #005fc6; }
+body .sender[type=normal][colornumber='10'] { color: #6bbeff; }
+body .sender[type=normal][colornumber='11'] { color: #6b00aa; }
+body .sender[type=normal][colornumber='12'] { color: #885fe6; }
+body .sender[type=normal][colornumber='13'] { color: #B8DFFF; }
+body .sender[type=normal][colornumber='14'] { color: #bb0003; }
+body .sender[type=normal][colornumber='15'] { color: #76a87f; }
+
+body .inline_nickname[colornumber='0'] { color: #f00; }
+body .inline_nickname[colornumber='1'] { color: #d55e19; }
+body .inline_nickname[colornumber='2'] { color: #ed9600; }
+body .inline_nickname[colornumber='3'] { color: #ffe200; }
+body .inline_nickname[colornumber='4'] { color: #ff0; }
+body .inline_nickname[colornumber='5'] { color: #d8e900; }
+body .inline_nickname[colornumber='6'] { color: #aeda00; }
+body .inline_nickname[colornumber='7'] { color: #5aae00; }
+body .inline_nickname[colornumber='8'] { color: #009d88; }
+body .inline_nickname[colornumber='9'] { color: #005fc6; }
+body .inline_nickname[colornumber='10'] { color: #6bbeff; }
+body .inline_nickname[colornumber='11'] { color: #6b00aa; }
+body .inline_nickname[colornumber='12'] { color: #885fe6; }
+body .inline_nickname[colornumber='13'] { color: #B8DFFF; }
+body .inline_nickname[colornumber='14'] { color: #bb0003; }
+body .inline_nickname[colornumber='15'] { color: #76a87f; }
 
 /* NOTICE/CTCP/WALLOPS */
 
@@ -227,13 +268,15 @@ body div[type=action] .sender:after {
 	content: "";
 }
 
-/* REPLY/SYSTEM/ERROR/DEBUG/INVITE */
+/* REPLY/SYSTEM/ERROR/DCC/DEBUG/INVITE */
 
 body div[type=invite],
 body div[type=reply],
 body div[type=system],
 body div[type=error],
 body div[type=error_reply],
+body div[type=dcc_send_send],
+body div[type=dcc_send_receive],
 body div[type=debug_send],
 body div[type=debug_receive] {
 	color: #777;
@@ -251,6 +294,8 @@ body div[type=reply] span.time,
 body div[type=system] span.time,
 body div[type=error] span.time,
 body div[type=error_reply] span.time,
+body div[type=dcc_send_send] span.time,
+body div[type=dcc_send_receive] span.time,
 body div[type=debug_send] span.time,
 body div[type=debug_receive] span.time {
 	padding-right: 16px;
@@ -267,7 +312,7 @@ body div[type=mode],
 body div[type=nick],
 body div[type=website],
 body div[type=topic] {
-    color: #666;
+    color: #424242;
 	padding: 2px 5px 1px;
 }
 
@@ -319,93 +364,6 @@ body div[type=nick] .message:before {
 	overflow: hidden;
 	text-align: right;
 	font-weight: 700;
-}
-
-/* Nickname Colors */
-
-body div[type=privmsg] .sender[type=myself],
-body div[type=action] .sender[type=myself] { 
-	color: #FFF; 
-}
-
-body .sender[type=normal][colornumber='0'], 
-body .inline_nickname[colornumber='0'] {
-	color: #f00; 
-}
-
-body .sender[type=normal][colornumber='1'], 
-body .inline_nickname[colornumber='1'] {
-	color: #d55e19; 
-}
-
-body .sender[type=normal][colornumber='2'], 
-body .inline_nickname[colornumber='2'] {
-	color: #ed9600; 
-}
-
-body .sender[type=normal][colornumber='3'], 
-body .inline_nickname[colornumber='3'] {
-	color: #ffe200; 
-}
-
-body .sender[type=normal][colornumber='4'], 
-body .inline_nickname[colornumber='4'] {
-	color: #ff0; 
-}
-
-body .sender[type=normal][colornumber='5'], 
-body .inline_nickname[colornumber='5'] {
-	color: #d8e900; 
-}
-
-body .sender[type=normal][colornumber='6'], 
-body .inline_nickname[colornumber='6'] {
-	color: #aeda00; 
-}
-
-body .sender[type=normal][colornumber='7'], 
-body .inline_nickname[colornumber='7'] {
-	color: #5aae00; 
-}
-
-body .sender[type=normal][colornumber='8'], 
-body .inline_nickname[colornumber='8'] {
-	color: #009d88; 
-}
-
-body .sender[type=normal][colornumber='9'], 
-body .inline_nickname[colornumber='9'] {
-	color: #005fc6; 
-}
-
-body .sender[type=normal][colornumber='10'], 
-body .inline_nickname[colornumber='10'] {
-	color: #6bbeff; 
-}
-
-body .sender[type=normal][colornumber='11'], 
-body .inline_nickname[colornumber='11'] {
-	color: #6b00aa; 
-}
-
-body .sender[type=normal][colornumber='12'], 
-body .inline_nickname[colornumber='12'] {
-	color: #885fe6; 
-}
-
-body .sender[type=normal][colornumber='13'], 
-body .inline_nickname[colornumber='13'] {
-	color: #B8DFFF; 
-}
-
-body .sender[type=normal][colornumber='14'], 
-body .inline_nickname[colornumber='14'] {
-	color: #bb0003; 
-}
-
-body .sender[type=normal][colornumber='15'], 
-body .inline_nickname[colornumber='15'] {
-	color: #76a87f; 
 }
 
 /* mIRC Color Codes */
