--- a/Resources/Styles/Simplified Dark/design.css
+++ b/Resources/Styles/Simplified Dark/design.css
@@ -69,7 +69,6 @@ a:hover {
   color: #000;
   z-index: 400;
   opacity: 0.95;
-  font-size: 9px;
   position: fixed;
   background: #CFD4DD;
   padding: 2px 0.5em 3px;
