--- a/Resources/Styles/Simplified Inverted/design.css
+++ b/Resources/Styles/Simplified Inverted/design.css
@@ -69,7 +69,6 @@ a:hover {
   color: #FFFFFF;
   z-index: 400;
   opacity: 0.95;
-  font-size: 9px;
   position: fixed;
   background: #302B22;
   padding: 2px 0.5em 3px;
